fullalign fix

--- a/css/_custom.scss
+++ b/css/_custom.scss
@@ -18,6 +18,7 @@
   }
   .swiper-slide{
     margin-bottom: 0;
+    margin-right: 0;
 
     figcaption{
       padding-bottom: 2em !important;
